<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="theme"
        android:title="@string/theme_choose"
        android:defaultValue="1"
        android:entries="@array/themes"
        android:entryValues="@array/themes"
        android:dialogTitle="@string/theme_choose" />
    <ListPreference
        android:key="text_size"
        android:title="@string/text_size"
        android:defaultValue="1"
        android:entries="@array/font_size"
        android:entryValues="@array/font_size"
        android:dialogTitle="@string/text_size" />

    <ListPreference
        android:key="language"
        android:title="@string/lang_choose"
        android:defaultValue="1"
        android:entries="@array/languages"
        android:entryValues="@array/languages"
        android:dialogTitle="@string/lang_choose" />
    <Preference
        android:key="clear_data"
        android:title="@string/clear_data"
        />
</PreferenceScreen>