<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <EditText
            android:id="@+id/seqName"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:hint="@string/timer_name" />

        <TextView
            android:id="@+id/colorView"
            android:layout_width="match_parent"
            android:layout_height="29dp"
            android:text="@string/timer_color" />

        <Spinner
            android:id="@+id/colorSpin"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:entries="@array/colors"/>

        <EditText
            android:id="@+id/editName"
            android:hint="@string/phase_name"
            android:layout_width="match_parent"
            android:layout_height="44dp" />

        <EditText
            android:id="@+id/editTime"
            android:hint="@string/sec_amount"
            android:layout_width="match_parent"
            android:inputType="number"
            android:layout_height="43dp" />

        <Button
            android:id="@+id/add_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_last" />

        <ListView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>