<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhaseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="171dp"
        tools:layout_editor_absoluteY="251dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/phase_name"/>

        <EditText
            android:id="@+id/phaseName"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:hint="@string/phase_name" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:text="@string/sec_amount"/>

        <EditText
            android:id="@+id/phaseTime"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:hint="@string/sec_amount"
            android:inputType="number" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>